# promotional-copy-generation

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/skills/langgraph-agents/: SKILL.md  config.json
.cursor/skills/langgraph-agents/reference/: base-agent-architecture.md  (+9 more)
config/: mcp_servers.yaml  stage_contexts.yaml
config/model_deployment/: image_gen.yaml  main.yaml  vl.yaml
config/prompts/: context_enhance.txt  copy_write.txt  image_gen.txt  image_prompt.txt  safety_check.txt
docs/: 01-需求文档.md  02-设计方案.md  03-技术路线.md  04-项目代码解析.md  05-MCP扩展指南.md  README.md
model_deployment/: README.md  __init__.py  config.py  diffusers_serve.py  launch_vllm.py
model_deployment/test/: query_image_gen_server.sh  query_llm_server.sh  query_vl_server.sh
promotional_copy_generation/: __init__.py  config.py  main.py
promotional_copy_generation/agent/: __init__.py  graph.py  multimodal.py  state.py
promotional_copy_generation/agent/nodes/: __init__.py  context_enhancer.py  copy_writer.py  image_generator.py  image_prompt.py  input_safety_checker.py  output_safety_checker.py
promotional_copy_generation/api/: __init__.py  models.py  routes.py
promotional_copy_generation/context/: __init__.py  stage_loader.py
promotional_copy_generation/mcp/: __init__.py  client.py  config.py  loader.py  provider.py  registry.py  transports.py
promotional_copy_generation/safety/: __init__.py  checker.py
promotional_copy_generation/skills/: __init__.py  loader.py  registry.py
promotional_copy_generation/skills/builtin/: douyin.md
scripys/: download_model_from_hf.sh
(+4 files in other folders)
